aggiunte tutte le immagini in cartella

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   <title>Teambit</title>
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <header>
+    <nav class="navbar">
+      
+    </nav>
+    <div class="jumbotron">
+
+    </div>
+  </header>
+  <main>
+    <section></section>
+    <section></section>
+    <section></section>
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
