--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 <body>
   <header>
     <nav class="navbar">
-      
+      <div class="nav_left">
+        <img src="img/logo-small.svg" alt="">
+        <h2>Teambit</h2>
+      </div>
+      <div class="nav_right">
+        <ul>
+          <li><a href="#">Solution</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Sign In</a></li>
+          <li><button type="button" name="button">Sign Up</button></li>
+        </ul>
+      </div>
     </nav>
     <div class="jumbotron">
 
