--- a/index.html
+++ b/index.html
@@ -9,23 +9,26 @@
 </head>
 <body>
   <header>
-    <nav class="navbar">
-      <div class="nav_left">
-        <img src="img/logo-small.svg" alt="">
-        <h2>Teambit</h2>
-      </div>
-      <div class="nav_right">
-        <ul>
-          <li><a href="#">Solution</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Sign In</a></li>
-          <li><button type="button" name="button">Sign Up</button></li>
-        </ul>
-      </div>
-    </nav>
+    <div class="container">
+      <nav class="navbar">
+        <div class="nav_left">
+          <img src="img/logo-small.svg" alt="">
+          <h2>Teambit</h2>
+        </div>
+        <div class="nav_right">
+          <ul>
+            <li><a href="#">Solution</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Sign In</a></li>
+            <li><button type="button" name="button">Sign Up</button></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
     <div class="jumbotron">
-
+      <div class="title_wrapper"></div>
+      <div class="jumbo_wrapper"></div>
     </div>
   </header>
   <main>
