--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
   <header>
       <nav class="navbar">
-      <div class="container">
         <div class="nav_left">
           <img src="img/logo-small.svg" alt="">
           <h2>Teambit</h2>
@@ -21,10 +20,9 @@
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Sign In</a></li>
-            <li><button type="button" name="button">Sign Up</button></li>
+            <li><button class="login_btn" type="button" name="button">Sign Up</button></li>
           </ul>
         </div>
-      </div>
       </nav>
     <div class="jumbotron">
       <div class="title_wrapper"></div>
