--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Sign In</a></li>
-            <li><button class="login_btn" type="button" name="button">Sign Up</button></li>
+            <li><a href="#" class="login_btn"><img src="img/google-logo.png" alt="">Sign Up</a></li>
           </ul>
         </div>
       </nav>
     <div class="jumbotron">
-      <div class="title_wrapper"></div>
+      <div class="title_wrapper">
+
+      </div>
       <div class="jumbo_wrapper"></div>
     </div>
   </header>
