--- a/index.html
+++ b/index.html
@@ -4,19 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- link fontawesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+  <!-- link nostro stile -->
   <link rel="stylesheet" href="dist/app.css">
   <title>Teambit</title>
 </head>
 <body>
+  <!-- header -->
   <header>
+
+    <!-- navbar -->
       <nav class="navbar">
         <div class="nav_left">
           <img src="img/logo-small.svg" alt="">
           <h2>Teambit</h2>
         </div>
         <div class="nav_right">
-          <ul>
-            <li><a href="#">Solution</a></li>
+          <div class="hamburger_menu">
+            <i class="fas fa-bars"></i>
+          </div>
+          <ul class="menu">
+            <li>
+              <a href="#">Solution <i class="fas fa-caret-down"></i></a>
+
+            </li>
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Sign In</a></li>
@@ -24,13 +36,20 @@
           </ul>
         </div>
       </nav>
+      <!-- /navbar -->
+
+      <!-- jumbotron -->
     <div class="jumbotron">
       <div class="title_wrapper">
 
       </div>
       <div class="jumbo_wrapper"></div>
     </div>
+    <!-- /jumbotron -->
+
   </header>
+<!-- /header -->
+
   <main>
     <section></section>
     <section></section>
