up jumbo almost complete

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <!-- navbar -->
       <nav class="navbar">
-        <div class="nav_left">
+        <div class="nav_left flex">
           <img src="img/logo-small.svg" alt="">
           <h2>Teambit</h2>
         </div>
-        <div class="nav_right">
+        <div class="nav_right flex">
           <div class="hamburger_menu">
             <i class="fas fa-bars"></i>
           </div>
@@ -39,11 +39,19 @@
       <!-- /navbar -->
 
       <!-- jumbotron -->
-    <div class="jumbotron">
+    <div class="jumbotron flex">
       <div class="title_wrapper">
-
+        <h1>Understand, recognize and develop your people</h1>
+        <p>Teambit helps teams create a high performing culture with regular feedback.</p>
+        <a class="sign_up_btn" href="#"><img src="img/google-logo-png.png" alt=""> Sign Up with Google</a>
+        <span>or</span>
+        <a class="sign_up_btn" href="#"><img src="img/slack-logo.png" class="slack_img" alt=""> Sign Up with Slack</a>
+        <a class="sign_up_email" href="#">or use your email address  <i class="fas fa-long-arrow-alt-right"></i></a>
       </div>
-      <div class="jumbo_wrapper"></div>
+
+      <div class="jumbo_wrapper">
+        <img src="img/illustration-main.jpg" alt="">
+      </div>
     </div>
     <!-- /jumbotron -->
 
