--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Sign In</a></li>
-            <li><a href="#" class="login_btn"><img src="img/google-logo.png" alt="">Sign Up</a></li>
+            <li><a href="#" class="login_btn"><img src="img/google-logo-png.png" alt="">Sign Up</a></li>
           </ul>
         </div>
       </nav>
