--- a/index.html
+++ b/index.html
@@ -59,9 +59,55 @@
 <!-- /header -->
 
   <main>
-    <section></section>
-    <section></section>
-    <section></section>
+    <section class="section_top">
+      <div class="section_top_wrapper">
+        <h2>Traditional people processes lead to disengagement and turnover.</h2>
+        <div class="section_top_img_wrapper">
+          <div class="img_item">
+            <img src="img/hardcore.png" alt="">
+            <h4>They are hardcore,formal and disconnected</h4>
+          </div>
+          <div class="img_item">
+            <img src="img/nofeedback.png" alt="">
+            <h4>They don't encourage regular feedback</h4>
+          </div>
+          <div class="img_item">
+            <img src="img/notsafe.png" alt="">
+            <h4>They don't make it safe to speak up</h4>
+          </div>
+          <div class="img_item">
+            <img src="img/before.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="section_top_wrapper">
+        <h2>It doesn't have to be like that. Teambit is a modern solution that teammates love.</h2>
+        <div class="section_top_img_wrapper">
+          <div class="img_item">
+            <img src="img/lightweight.png" alt="">
+            <h4>They are hardcore,formal and disconnected</h4>
+          </div>
+          <div class="img_item">
+            <img src="img/feedbacksuggestions.png" alt="">
+            <h4>They don't encourage regular feedback</h4>
+          </div>
+          <div class="img_item">
+            <img src="img/safe.png" alt="">
+            <h4>They don't make it safe to speak up</h4>
+          </div>
+          <div class="img_item">
+            <img src="img/after.png" alt="">
+            <h3>Here is how it works</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section_center">
+
+    </section>
+    <section class="section_bottom">
+
+    </section>
   </main>
   <footer>
 
