--- a/index.html
+++ b/index.html
@@ -59,25 +59,12 @@
 <!-- /header -->
 
   <main>
-    <section class="section_top">
+    <!-- <section class="section_top">
       <div class="section_top_wrapper">
-        <h2>Traditional people processes lead to disengagement and turnover.</h2>
+
         <div class="section_top_img_wrapper">
-          <div class="img_item">
-            <img src="img/hardcore.png" alt="">
-            <h4>They are hardcore,formal and disconnected</h4>
-          </div>
-          <div class="img_item">
-            <img src="img/nofeedback.png" alt="">
-            <h4>They don't encourage regular feedback</h4>
-          </div>
-          <div class="img_item">
-            <img src="img/notsafe.png" alt="">
-            <h4>They don't make it safe to speak up</h4>
-          </div>
-          <div class="img_item">
-            <img src="img/before.png" alt="">
-          </div>
+
+
         </div>
       </div>
       <div class="section_top_wrapper">
@@ -107,7 +94,40 @@
     </section>
     <section class="section_bottom">
 
-    </section>
+    </section> -->
+    <div class="wrapper_80">
+      <div class="title_wrapper">
+        <h2>Traditional people processes lead to disengagement and turnover.</h2>
+      </div>
+      <div class="process">
+        <div class="img_small">
+          <img src="img/hardcore.png" alt="">
+          <div class="title_wrapper">
+            <h4>They are hardcore,formal and disconnected</h4>
+          </div>
+        </div>
+        <div class="img_small">
+          <img src="img/nofeedback.png" alt="">
+          <div class="title_wrapper">
+            <h4>They don't encourage regular feedback</h4>
+          </div>
+
+        </div>
+        <div class="img_small">
+          <img src="img/notsafe.png" alt="">
+          <div class="title_wrapper">
+            <h4>They don't make it safe to speak up</h4>
+          </div>
+
+        </div>
+        <div class="img_medium">
+          <img src="img/before.png" alt="">
+        </div>
+      </div>
+    </div>
+    <!-- <div class="wrapper_80"></div>
+    <div class="wrapper_100"></div>
+    <div class="wrapper_80"></div> -->
   </main>
   <footer>
 
