--- a/index.html
+++ b/index.html
@@ -58,43 +58,8 @@
   </header>
 <!-- /header -->
 
+<!-- main content -->
   <main>
-    <!-- <section class="section_top">
-      <div class="section_top_wrapper">
-
-        <div class="section_top_img_wrapper">
-
-
-        </div>
-      </div>
-      <div class="section_top_wrapper">
-        <h2>It doesn't have to be like that. Teambit is a modern solution that teammates love.</h2>
-        <div class="section_top_img_wrapper">
-          <div class="img_item">
-            <img src="img/lightweight.png" alt="">
-            <h4>They are hardcore,formal and disconnected</h4>
-          </div>
-          <div class="img_item">
-            <img src="img/feedbacksuggestions.png" alt="">
-            <h4>They don't encourage regular feedback</h4>
-          </div>
-          <div class="img_item">
-            <img src="img/safe.png" alt="">
-            <h4>They don't make it safe to speak up</h4>
-          </div>
-          <div class="img_item">
-            <img src="img/after.png" alt="">
-            <h3>Here is how it works</h3>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="section_center">
-
-    </section>
-    <section class="section_bottom">
-
-    </section> -->
     <div class="wrapper_80">
       <div class="title_wrapper">
         <h2>Traditional people processes lead to disengagement and turnover.</h2>
@@ -125,10 +90,37 @@
         </div>
       </div>
     </div>
-    <!-- <div class="wrapper_80"></div>
-    <div class="wrapper_100"></div>
-    <div class="wrapper_80"></div> -->
+    <div class="wrapper_80">
+      <div class="title_wrapper">
+        <h2>It doesn't have to be like that. Teambit is a modern solution that teammates love.</h2>
+      </div>
+      <div class="process">
+        <div class="img_small">
+          <img src="img/lightweight.png" alt="">
+          <div class="title_wrapper">
+            <h4>They are hardcore,formal and disconnected</h4>
+          </div>
+        </div>
+        <div class="img_small">
+          <img src="img/feedbacksuggestions.png" alt="">
+          <div class="title_wrapper">
+            <h4>They don't encourage regular feedback</h4>
+          </div>
+        </div>
+        <div class="img_small">
+          <img src="img/safe.png" alt="">
+          <div class="title_wrapper">
+            <h4>They don't make it safe to speak up</h4>
+          </div>
+        </div>
+        <div class="img_medium">
+          <img src="img/after.png" alt="">
+          <h3>Here is how it works</h3>
+        </div>
+      </div>
+    </div>
   </main>
+  <!-- /main content -->
   <footer>
 
   </footer>
