--- a/index.html
+++ b/index.html
@@ -76,21 +76,19 @@
           <div class="title_wrapper">
             <h4>They don't encourage regular feedback</h4>
           </div>
-
         </div>
         <div class="img_small">
           <img src="img/notsafe.png" alt="">
           <div class="title_wrapper">
             <h4>They don't make it safe to speak up</h4>
           </div>
-
         </div>
         <div class="img_medium">
           <img src="img/before.png" alt="">
         </div>
       </div>
     </div>
-    <div class="wrapper_80">
+    <div class="wrapper_80 no_border_bottom">
       <div class="title_wrapper">
         <h2>It doesn't have to be like that. Teambit is a modern solution that teammates love.</h2>
       </div>
@@ -118,6 +116,10 @@
           <h3>Here is how it works</h3>
         </div>
       </div>
+    </div>
+    <div class="teammates_feedback">
+      <div class="col-left"></div>
+      <div class="col-right"></div>
     </div>
   </main>
   <!-- /main content -->
