--- a/index.html
+++ b/index.html
@@ -117,9 +117,13 @@
         </div>
       </div>
     </div>
-    <div class="teammates_feedback">
-      <div class="col-left"></div>
-      <div class="col-right"></div>
+    <div class="teammates_feedback flex">
+      <div class="col-left">
+        <img src="img/employee-feedback.jpg" alt="">
+      </div>
+      <div class="col-right">
+        <img src="img/communication.jpg" alt="">
+      </div>
     </div>
   </main>
   <!-- /main content -->
