--- a/index.html
+++ b/index.html
@@ -122,7 +122,12 @@
         <img src="img/employee-feedback.jpg" alt="">
       </div>
       <div class="col-right">
-        <img src="img/communication.jpg" alt="">
+        <div class="rules_wrapper">
+          <h2>Feedback to help teammates improve</h2>
+          <p>Empower your teammates to know in real time what they are doing well and what they need to improve.</p>
+          <a href="#">Learn more</a>
+          <img src="img/communication.jpg" alt="">
+        </div>
       </div>
     </div>
   </main>
