--- a/index.html
+++ b/index.html
@@ -125,8 +125,21 @@
         <div class="rules_wrapper">
           <h2>Feedback to help teammates improve</h2>
           <p>Empower your teammates to know in real time what they are doing well and what they need to improve.</p>
-          <a href="#">Learn more</a>
+          <a href="#">Learn more <i class="fas fa-long-arrow-alt-right"></i></a>
           <img src="img/communication.jpg" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="surveys flex">
+      <div class="col-left">
+        <h2>Feedback to help teammates improve</h2>
+        <p>Empower your teammates to know in real time what they are doing well and what they need to improve.</p>
+        <a href="#">Learn more <i class="fas fa-long-arrow-alt-right"></i></a>
+        <img src="img/insights.jpg" alt="">
+      </div>
+      <div class="col-right">
+        <div class="rules_wrapper">
+          <img src="img/employee-survey.jpg" alt="">
         </div>
       </div>
     </div>
