--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
     <div class="surveys flex">
       <div class="col-left">
-        <h2>Feedback to help teammates improve</h2>
+        <h2>Surveys to help the team be better</h2>
         <p>Empower your teammates to know in real time what they are doing well and what they need to improve.</p>
         <a href="#">Learn more <i class="fas fa-long-arrow-alt-right"></i></a>
         <img src="img/insights.jpg" alt="">
